Fix edit profile horizontal scroll and restyle

--- a/src/components/EditScreenContent/style.css
+++ b/src/components/EditScreenContent/style.css
@@ -1,5 +1,13 @@
-.edit-profile-container p {
+.edit-profile-content-container {
+  height: 100%;
+}
+
+.edit-profile-content-container p {
   margin: 0;
+}
+
+.edit-user-account {
+  height: 100%;
 }
 
 .edit-profile-header-name {
@@ -30,6 +38,7 @@
 .edit-image-container input {
   visibility: hidden;
   width: 0;
+  overflow: hidden !important;
 }
 
 .edit-avatar-label {
@@ -42,7 +51,6 @@
 
 .add-edit-topic-section {
   background-color: rgb(248, 248, 249);
-  height: 466px;
   padding-bottom: 48px;
 }
 
