--- a/src/screens/EditProfile/style.css
+++ b/src/screens/EditProfile/style.css
@@ -4,4 +4,6 @@
 
 .edit-screen-content {
   padding-top: 54px;
+  height: 100vh;
+  background-color: #f8f8f9;
 }
